# CMakeQtTest

./: .gitignore  CMakeLists.txt  README.md
apps/hello/: CMakeLists.txt
apps/hello2/: CMakeLists.txt  res.qrc
apps/hello2/src/: hello2.cpp  hello2.h  hello2.ui  main.cpp
src/: hello.cpp  hello.h  hello.ui  main.cpp
